--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -16,6 +16,7 @@
                     <li><a href="/user/login">Login</a></li>
                     <li><a href="/user/register">Register</a></li>
                 <% } else { %>
+                    <li><a href="/user/<%= currentUser._id %> ">Profile</a></li>
                     <li><a href="/user/logout">Logout</a></li>
                 <% } %>
             </ul>
